# kaos-content

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  compat.yml  min-deps.yml  quality.yml  release.yml  security-full.yml  security-light.yml  security.yml  test.yml
docs/: KNT-601-CONSUMER-AUDIT.md  SEARCHABLE_CORPUS.md
docs/standards/: code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  tests-fixtures-ci.md
kaos_content/: __init__.py  _security.py  artifacts.py  cluster.py  corpus.py  diff.py  errors.py  indexing.py  normalize.py  revision.py  search.py  shortcuts.py  structure.py  tokens.py  tools.py  transforms.py  units.py
kaos_content/bridges/: __init__.py  content_to_tabular.py  duckdb.py  polars.py
kaos_content/builders/: __init__.py  builder.py
kaos_content/chunking/: __init__.py  section_chunker.py
kaos_content/dedup/: __init__.py  api.py  canonical.py  pipeline.py  presets.py  types.py
kaos_content/dedup/levels/: __init__.py  binary_hash.py  fuzzy_binary.py  minhash.py  perceptual.py  semantic.py  semantic_graph.py  text_hash.py
kaos_content/images/: __init__.py  artifacts.py  model.py  ops.py  profiles.py
kaos_content/layout/: __init__.py  clustering.py  detection.py  profiles.py  segmentation.py  types.py
kaos_content/model/: __init__.py  annotation.py  annotation_bodies.py  attr.py  blocks.py  document.py  extraction.py  inlines.py  metadata.py  node.py  summary.py  table.py  tabular.py
kaos_content/parsers/: __init__.py  html.py  markdown.py  plain.py
kaos_content/serializers/: __init__.py  _revision.py  html.py  markdown.py  tabular.py  text.py
kaos_content/summarize/: __init__.py  stopwords.py
kaos_content/traversal/: __init__.py  index.py  queries.py  visitor.py
kaos_content/views/: __init__.py  document_view.py  entity_filters.py  models.py  tabular_view.py
tests/: test_annotation_index.py  test_structure.py
tests/benchmarks/: dedup_scale_test.py
tests/fixtures/perceptual/: README.md
tests/fuzz/: __init__.py  conftest.py  test_fuzz_json_robustness.py  test_fuzz_markdown_roundtrip.py  test_fuzz_serializer_xss.py  test_fuzz_sql_safety.py  test_fuzz_url_filter.py
tests/integration/: test_corpus_tools_real_ndas.py  test_entity_filters_real_ndas.py  test_office_duckdb_e2e.py  test_semantic_dedup.py  test_summary_real_ndas.py
tests/security/: test_security_sec1.py  test_security_sec2.py  test_security_sec3.py  test_security_sec4.py  test_security_sec5.py  test_security_sec6.py  test_security_sec7.py
tests/unit/: test_annotation.py  test_annotation_bodies.py  test_api_naming.py  test_artifacts.py  test_attr.py  test_block_identity_contract.py  test_blocks.py  test_builder.py  test_cluster_labels.py  test_content_model_validation.py  test_content_to_tabular_bridge.py  test_corpus_protocol.py  test_corpus_tools.py  test_dedup.py  test_dedup_canonical.py  test_dedup_levels_base_install.py  test_dedup_perceptual.py  test_dedup_semantic.py  test_dedup_semantic_graph.py  test_diff.py  test_diff_markdown.py  test_diff_property.py  test_diff_security.py  test_diff_serialization.py  test_document.py  test_entity_filter_tools.py  test_entity_filters.py  test_extraction.py  test_html_pre_content_mode.py  test_html_serializer.py  test_image_figure.py  test_images.py  test_index.py  test_indexing.py  test_inlines.py  test_layout.py  test_markdown_parser.py  test_markdown_serializer.py  test_node_identity.py  test_normalize.py  (+43 more)
